Patched an issue with formatting empty elements (#480)